# mobile_robot

./: .gitignore  AHRSFilter.c  MadgwickAHRS.h.gch  example_mission.mission
robot/include/imu/: imu_defs.hpp
ros-imu-bno055-master/src/: bno055_i2c_node.cpp
rviz/: my_work.rviz
src/devices/: CMakeLists.txt  package.xml
src/devices/include/odometry/: odometry_defs.hpp
src/devices/src/: imu_node.cpp  odometry_node.cpp
src/mobile_robot/: CMakeLists.txt  package.xml  setup.py
src/mobile_robot/action/: MissionPlan.action  Movement.action  Rotation.action
src/mobile_robot/config/: diffdrive.yaml  paramlist.yaml
src/mobile_robot/include/compass/: compass.hpp
src/mobile_robot/launch/: 09-joints.launch  10-head.launch  12-gripper.launch  13-diffdrive.launch  gazebo.launch  mobile_robot.launch
src/mobile_robot/msg/: PointTravel.msg
src/mobile_robot/scripts/: adaptive_heading_filter.py  get_dist.py  gps_kalman.py  gps_to_xy.py  mission_planner.py  mission_reader.py  moving_average_heading_filter.py  odom_to_yaw.py  sg_heading_filter.py
src/mobile_robot/scripts/calc/: gps_to_xy.py
src/mobile_robot/src/: compass.cpp
src/mobile_robot/urdf/: 08-macroed.urdf.xacro  13-diffdrive.urdf.xacro  mobile_robot.urdf.xacro
