<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot</name>
  <version>0.5.1</version>
  <description>The urdf_sim_tutorial package</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>rqt_robot_steering</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf_tutorial</depend>
  <depend>xacro</depend>

</package>
